# odpi

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  libodpic.pc.in
include/: Makefile.am  Makefile.in
packaging/SPECS/: libodpi.spec
src/: Makefile.am  Makefile.in
test/: Makefile.am  Makefile.in  TestSuiteRunner.c  libodpic_test.la
test/sql/: TestEnv.sql
