ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4
AM_CPPFLAGS = \
    -I../include

LDADD = \
    ../src/libodpic.la

check_PROGRAMS = \
    TestSuiteRunner \
    TestContext \
    TestConn \
    TestNumbers \
    TestAQ \
    TestBatchErrors \
    TestBinds \
    TestConnProperties \
    TestDataTypes \
    TestDeqOptions \
    TestDMLReturning \
    TestEnqOptions \
    TestImplicitResults \
    TestLOBs \
    TestMiscCases \
    TestMsgProps \
    TestObjects \
    TestObjectTypes \
    TestPool \
    TestPoolProperties \
    TestQueries \
    TestQueue \
    TestRowIds \
    TestScrollCursors \
    TestSessTags \
    TestSodaColl \
    TestSodaCollCursor \
    TestSodaDb \
    TestSodaDoc \
    TestSodaDocCursor \
    TestStatements \
    TestSubscriptions \
    TestTransactions \
    TestVariables

TestAQ_SOURCES = TestAQ.c TestLib.c
TestBatchErrors_SOURCES = TestBatchErrors.c TestLib.c
TestBinds_SOURCES = TestBinds.c TestLib.c
TestConn_SOURCES = TestConn.c TestLib.c
TestConnProperties_SOURCES = TestConnProperties.c TestLib.c
TestContext_SOURCES = TestContext.c TestLib.c
TestDataTypes_SOURCES = TestDataTypes.c TestLib.c
TestDeqOptions_SOURCES = TestDeqOptions.c TestLib.c
TestDMLReturning_SOURCES = TestDMLReturning.c TestLib.c
TestEnqOptions_SOURCES = TestEnqOptions.c TestLib.c
TestImplicitResults_SOURCES = TestImplicitResults.c TestLib.c
TestLOBs_SOURCES = TestLOBs.c TestLib.c
TestMiscCases_SOURCES = TestMiscCases.c TestLib.c
TestMsgProps_SOURCES = TestMsgProps.c TestLib.c
TestNumbers_SOURCES = TestNumbers.c TestLib.c
TestObjects_SOURCES = TestObjects.c TestLib.c
TestObjectTypes_SOURCES = TestObjectTypes.c TestLib.c
TestPool_SOURCES = TestPool.c TestLib.c
TestPoolProperties_SOURCES = TestPoolProperties.c TestLib.c
TestQueries_SOURCES = TestQueries.c TestLib.c
TestQueue_SOURCES = TestQueue.c TestLib.c
TestRowIds_SOURCES = TestRowIds.c TestLib.c
TestScrollCursors_SOURCES = TestScrollCursors.c TestLib.c
TestSessTags_SOURCES = TestSessTags.c TestLib.c
TestSodaColl_SOURCES = TestSodaColl.c TestLib.c
TestSodaCollCursor_SOURCES = TestSodaCollCursor.c TestLib.c
TestSodaDb_SOURCES = TestSodaDb.c TestLib.c
TestSodaDoc_SOURCES = TestSodaDoc.c TestLib.c
TestSodaDocCursor_SOURCES = TestSodaDocCursor.c TestLib.c
TestStatements_SOURCES = TestStatements.c TestLib.c
TestSubscriptions_SOURCES = TestSubscriptions.c TestLib.c
TestSuiteRunner_SOURCES = TestSuiteRunner.c TestLib.c
TestTransactions_SOURCES = TestTransactions.c TestLib.c
TestVariables_SOURCES = TestVariables.c TestLib.c

TESTS = $(check_PROGRAMS)
